[DOC] lomonosov2015: 1st part
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Lomonosov2015/palachev.tex
+++ b/Documentation/i.palachev/Thesis/Lomonosov2015/palachev.tex
@@ -9,6 +9,60 @@
 \Author{Палачев~Илья~Александрович}{Аспирант}{Механико-математический
 факультет МГУ имени М.\,В.\,Ломоносова}{Москва}{Россия}{palachev.ilya@yandex.ru}
 
+Методы восстановления геометрических тел по измерениям опорной функции
+разрабатывались в течение почти 30 лет для различных приложений: в
+геометрической томографии [1, 5], обработке данных лазерного радара [2] и
+магнитно-резонансной визуализации [4]. В данной работе показано, что данные
+методы применимы для задачи восстановления тел по теневым контурам. Также
+приводится подход, позволяющий существенно оптимизировать один из них.
+
+\begin{definition}
+Пусть $K$ --- выпуклое тело в $\mathbb{R}^{n}$, а $S^{n - 1}$ ---
+единичная сфера в $\mathbb{R}^{n}$. Тогда \textbf{опорной функцией} тела $K$
+называется функция, определенная на $S^{n - 1}$ следующим образом:
+\begin{equation}
+h_{K}(u) = \sup \limits	_{x \in K} (x, u)	
+\end{equation}
+\end{definition}
+
+Как известно, всякое выпуклое тело однозначно задается своей опорной функцией.
+
+\begin{definition}
+Обозначим $(u_{1}, \ldots, u_{m})$ -- \textbf{опорные направления} (т. е. 
+единичные направления), $(h_{1}, \ldots, h_{m})$ -- \textbf{опорные числа} (т.
+е. измерения опорной функции тела $K$, полученные с погрешностью):
+\begin{equation}
+h_{i} = h_{K}(u_{i}) + \varepsilon_{i}
+\end{equation}
+Если существует такое выпуклое тело $K^{*}$, что $h_{K^{*}}(u_{i}) = h_{i}$, то
+набор опорных чисел $(h_{1}, \ldots, h_{m})$ называется \textbf{согласованным}.
+\end{definition}
+
+Суть вышеупомянутых методов состоит в том, чтобы по несогласованному набору
+опорных чисел получить ближайший к нему (в одной из метрик $L_{1}, L_{2},
+L_{\infty}$) согласованный набор $(h_{1}^{*}, \ldots, h_{m}^{*})$ и по нему
+восстановить тело просто с помощью пересечения полупространств.
+
+В работах [1, 2, 3, 4] данная задача сводилась к задачам линейного или 
+квадратичного программирования:
+
+\begin{equation}
+||h - h^{0}|| \to \inf \;\;\; s. t. \; C h >= 0,
+\end{equation}
+
+а в работе [5] --- к эквивалентной задаче в других переменных (координатах
+точек касания):
+
+\begin{equation}\label{PalachevProblem}
+||\{(x_{i}, u_{i})\}_{i = 1}^{m} - h^{0}|| \to \inf \;\;\; s. t. \;
+(x_{i}, u_{i}) >= (x_{j}, u_{i}), i \neq j
+\end{equation}
+
+Основным недостатком данного метода является то, что в $\mathbb{R}^{3}$ число 
+ограничений является квадратичным. В настоящем докладе приводится метод, с 
+помощью которого можно исключить большую часть ограничений как избыточные для 
+задачи, сформулированной в метрике $L_{\infty}$.
+
 \begin{references}
 \Source \ENGLISH{Prince\,J.\,L., Willsky\,A.\,S. Reconstructing convex sets
         from support line measurements // IEEE Transactions on Pattern Analysis
