--- a/Documentation/i.palachev/Thesis/Lomonosov2015/palachev.tex
+++ b/Documentation/i.palachev/Thesis/Lomonosov2015/palachev.tex
@@ -1,4 +1,6 @@
-\documentclass[usePics]{lomonosov}
+% Данные тезисы были оформлены в соответствии со следующей инструкцией:
+% http://smu.cs.msu.su/sites/default/files/attachments/instruction-thesis-lomonosov-2015.pdf
+\documentclass{lomonosov}
  
 \begin{thesis}
 
@@ -13,19 +15,13 @@
 разрабатывались в течение почти 30 лет для различных приложений: в
 геометрической томографии [1, 5], обработке данных лазерного радара [2] и
 магнитно-резонансной визуализации [4]. В данной работе показано, что данные
-методы применимы для задачи восстановления тел по теневым контурам. Также
-приводится подход, позволяющий существенно оптимизировать один из них.
+методы применимы для задачи восстановления тел по теневым контурам, которые
+можно интерпретировать как набор измерений опорной функции тела. Также
+приводится подход, позволяющий существенно оптимизировать один из этих методов.
 
-\begin{definition}
-Пусть $K$ --- выпуклое тело в $\mathbb{R}^{n}$, а $S^{n - 1}$ ---
-единичная сфера в $\mathbb{R}^{n}$. Тогда \textbf{опорной функцией} тела $K$
-называется функция, определенная на $S^{n - 1}$ следующим образом:
-\begin{equation}
-h_{K}(u) = \sup \limits	_{x \in K} (x, u)	
-\end{equation}
-\end{definition}
-
-Как известно, всякое выпуклое тело однозначно задается своей опорной функцией.
+Как известно, всякое выпуклое тело $K \subset \mathbb{R}^{n}$ однозначно
+задается своей опорной функцией $h_{K}(u) = \sup \limits_{x \in K} (x, u)$,
+определенной на единичной сфере $S^{n - 1} \subset \mathbb{R}^{n}$.
 
 \begin{definition}
 Обозначим $(u_{1}, \ldots, u_{m})$ -- \textbf{опорные направления} (т. е. 
@@ -41,27 +37,44 @@ h_{i} = h_{K}(u_{i}) + \varepsilon_{i}
 Суть вышеупомянутых методов состоит в том, чтобы по несогласованному набору
 опорных чисел получить ближайший к нему (в одной из метрик $L_{1}, L_{2},
 L_{\infty}$) согласованный набор $(h_{1}^{*}, \ldots, h_{m}^{*})$ и по нему
-восстановить тело просто с помощью пересечения полупространств.
-
-В работах [1, 2, 3, 4] данная задача сводилась к задачам линейного или 
-квадратичного программирования:
-
-\begin{equation}
-||h - h^{0}|| \to \inf \;\;\; s. t. \; C h >= 0,
-\end{equation}
-
-а в работе [5] --- к эквивалентной задаче в других переменных (координатах
-точек касания):
+восстановить тело. В работах [1-5] данная задача сводилась к задачам линейного 
+или квадратичного программирования. Основным недостатком данного метода является 
+то, что в $\mathbb{R}^{3}$ число ограничений является квадратичным. В настоящем 
+докладе приводится метод, с помощью которого можно исключить большую часть 
+ограничений как избыточные для задачи, сформулированной в метрике $L_{\infty}$
+в терминах точек касания [5]:
 
 \begin{equation}\label{PalachevProblem}
-||\{(x_{i}, u_{i})\}_{i = 1}^{m} - h^{0}|| \to \inf \;\;\; s. t. \;
-(x_{i}, u_{i}) >= (x_{j}, u_{i}), i \neq j
+\begin{split}
+\varepsilon &\to \inf \\
+s. t. \;\;\; (x_{i}, u_{i}) &\geq (x_{j}, u_{i}), \;\;
+1 \leq i \neq j \leq m, \\
+|(x_{i}, u_{i}) &- h^{0}_{i}| < \varepsilon, \;\;\;
+i = 1, \ldots, m
+\end{split}
 \end{equation}
 
-Основным недостатком данного метода является то, что в $\mathbb{R}^{3}$ число 
-ограничений является квадратичным. В настоящем докладе приводится метод, с 
-помощью которого можно исключить большую часть ограничений как избыточные для 
-задачи, сформулированной в метрике $L_{\infty}$.
+где $\varepsilon$ -- дополнительная переменная, а $x_{i} \in \mathbb{R}^{3}$ ---
+точки касания.
+
+\begin{theorem}\label{PalachevTheprem}
+Пусть система ограничений  в задаче (\ref{PalachevProblem}) разрешима для 
+некоторого $\varepsilon^{0}$. Обозначим многогранник
+$K = \bigcap \limits_{i = 1}^{m}\{(x, u_{i}) \leq h^{0}_{i} +
+\varepsilon^{0}\}$. Пусть $\delta$ - полярное преобразование двойственности.
+Тогда если отрезок, соединяющий точки
+$\delta(\{(x, u_{i}) = h^{0}_{i} - \varepsilon^{0}\})$ и
+$\delta(\{(x, u_{j}) = h^{0}_{j} - \varepsilon^{0}\})$ пересекает $\delta(K)$,
+то условия $(x_{i}, u_{i}) \geq (x_{j}, u_{i})$ и
+$(x_{j}, u_{j}) \geq (x_{i}, u_{j})$ избыточны в системе ограничений
+(\ref{PalachevProblem})
+\end{theorem}
+
+Данный метод был протестирован на опорных измерениях, полученных из 100 теневых
+контуров. Теорема \ref{PalachevTheprem} позволяет отбросить 85-95\% условий в
+зависимости от входных данных. Полученная задача линейного программирования
+была решена на различных солверах, наилучшее время работы составило около 30
+секунд.
 
 \begin{references}
 \Source \ENGLISH{Prince\,J.\,L., Willsky\,A.\,S. Reconstructing convex sets
@@ -87,5 +100,3 @@ L_{\infty}$) согласованный набор $(h_{1}^{*}, \ldots, h_{m}^{*
 \end{references}
 
 \end{thesis}
-
- 
