[DOC] lomonosov2015: fix last statement
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Lomonosov2015/palachev.tex
+++ b/Documentation/i.palachev/Thesis/Lomonosov2015/palachev.tex
@@ -72,9 +72,9 @@ $(x_{j}, u_{j}) \geq (x_{i}, u_{j})$ избыточны в системе огр
 
 Данный метод был протестирован на опорных измерениях, полученных из 100 теневых
 контуров. Теорема \ref{PalachevTheprem} позволяет отбросить 85-95\% условий в
-зависимости от входных данных. Полученная задача линейного программирования
-была решена на различных солверах, наилучшее время работы составило около 30
-секунд.
+зависимости от входных данных. Полученная задача была решена с использованием
+различных производственных и научно-исследовательских пакетов линейного
+программирования.
 
 \begin{references}
 \Source \ENGLISH{Prince\,J.\,L., Willsky\,A.\,S. Reconstructing convex sets
