[DOC] article: add 3d history
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
+++ b/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
@@ -152,15 +152,16 @@ $\mathfrak{C} \subset \mathbb{R}^{m}$ --- множество всех согла
 опорных чисел по направлениям $u_{1}, u_{2}, \ldots, u_{m}$.
 
 \textbf{3. Исторический обзор.} Описанный выше подход для двумерного случая был
-разработан в статьях Prince и Willsky \cite{Prince:1990:RCS:81024.81035} и Lele,
-Kulkarni и Willsky \cite{Lele:92}. В них доказывается так называемая
-\textbf{опорная теорема}:
+разработан в статьях Prince и Willsky \cite{Prince:1990:RCS:81024.81035},
+изучавшими данные из компьютерной томографии,  и Lele, Kulkarni и Willsky
+\cite{Lele:92}, изучавшими данные, полученные из лазерного радара. В них
+доказывается так называемая \textbf{опорная теорема}:
 
 \begin{SmartTheorem}
  \label{theorem:support-theorem}
   Набор опорных чисел $h = (h_{1}, h_{2}, \ldots, h_{m})$ по направлениям
-  $u_{i} = (\cos \theta_{i}, \sin \theta_{i}), i = 1, \ldots, m$ является
-  согласованным тогда и только тогда, когда
+  $u_{i} = (\cos \theta_{i}, \sin \theta_{i}) \in \mathbb{R}^{2},
+  i = 1, \ldots, m$ является согласованным тогда и только тогда, когда
 
   \begin{equation}
    C h \geq 0
@@ -252,7 +253,79 @@ Kulkarni и Willsky \cite{Lele:92}. В них доказывается так н
 быстродействия, а также предлагают подходы, позволяющие учитывать априорные
 знания о восстанавливаемых телах (такие как, например, кривизна).
 
+Более сложным является рассмотрение задачи в трехмерном случае. Аналог теоремы
+\ref{theorem:support-theorem} для трехмерного случая был доказан Karl, Kulkarni,
+Verghese и Willsky \cite{Karl:1996:LTC:234032.234054}.
+
+\begin{SmartTheorem}
+ Набор опорных чисел $h = (h_{1}, h_{2}, \ldots, h_{m})$ по направлениям
+ $u_{1}, u_{2}, \ldots, u_{m} \in \mathbb{R}^{3}$ является согласованным тогда и
+ только тогда, когда неравенство
+
+ \begin{equation}
+ \label{equation:consistency-3d}
+\left|\begin{array}{cc}
+  h_{i} & u_{i}^{T} \\
+  h_{j} & u_{j}^{T} \\
+  h_{k} & u_{k}^{T} \\
+  h_{l} & u_{l}^{T} \\
+\end{array}\right|
+  \left|\begin{array}{cc}
+  1 & u_{i}^{T} \\
+  1 & u_{j}^{T} \\
+  1 & u_{k}^{T} \\
+  1 & u_{l}^{T} \\
+\end{array}\right|
+\geq 0
+\end{equation}
+
+выполнено для всех четвёрок индексов $\{i, j, k, l\}$ таких, что сферический
+треугольник, образованный векторами $u_{i}, u_{j}, u_{k}$ содержит в своей
+внутренности вектор $u_{l}$ и не содержит никаких других опорных направлений из
+$u_{1}, \ldots, u_{m}$ (такие четвёрки называются локальными положительными
+конусами).
+\end{SmartTheorem}
+
+Таким образом, в трехмерном случае множество $\mathfrak{C}$ всех согласованных
+опорных числе представляет из себя опорный конус, задаваемый уравнением
+$C h \geq 0$, в котором строки опорной матрицы $C$ составлены из коэффициентов
+уравнения (\ref{equation:consistency-3d}).
+
+Авторы не доказали в статье оценок о количестве условий вида
+(\ref{equation:consistency-3d}), однако произвели численный эксперимент по
+построению условий для случайно выбранных опорных направлений. Из его
+результатов можно предположить, что для случайно выбранных направлений число
+уравнений растет примерно как $O(m^{2})$ (возможно, с логарифмическим
+множителем).
+
+Данный алгоритм был реализован Gregor и Rannou для данных из \\
+магнитно-резонансной визуализации в статьях \cite{IMA:IMA10007} и
+\cite{doi:10.1117/12.431168}. При этом авторы столкнулись с тем, что при больших
+размерностях (порядка 100000 опорных направлений) время поиска локальных
+положительных четвёрок было на порядок больше, чем время решения самой задачи
+квадратичного программирования.
+
+В связи с этим Gardner и Kiderlen \cite{4586384} решили переформулировать
+исходную задачу в терминах точек касания:
+
+\begin{equation}
+\label{equation:gardner-kiderlen}
+ ||\{(x_{i}, u_{i})\}_{i = 1}^{m} - h^{0}|| \to \inf \;\;\; s. t. \;\;
+ (x_{i}, u_{i}) \geq (x_{j}, u_{i}), 1 \leq i \neq j \leq m
+\end{equation}
+
+где $x_{i} \in \mathbb{R}^{3}$ --- точки касания тела с опорной плоскостью,
+имеющей нормаль $u_{i}$. Как нетрудно видеть, если решить задачу оптимизации
+(\ref{equation:gardner-kiderlen}), то по полученным точкам касания $x^{*}_{i}$
+можно получить согласованные опорные числа $h^{*}_{i} = (x^{*}_{i}, u_{i})$, а
+по ним --- восстановить основной объект.
+
+Преимущество данного подхода состоит в том, что условия согласованности
+выписываются автоматически, и для их нахождения не требуется искать все
+локальные положительные конусы. Тем не менее, основная проблема данного подхода,
+а именно квадратичное число условий, сохраняется в данной постановке задачи.
+
 \bibliographystyle{plain}
-\bibliography{307167,81035,josaa-9-10-1693}
+\bibliography{307167,81035,josaa-9-10-1693,234054,10.10022Fima.10007,906585citation,4586384}
 
 \end{document}
