[DOC] article: fix "mri" -> "MRI"
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article/906585citation.bib
+++ b/Documentation/i.palachev/Thesis/Article/906585citation.bib
@@ -1,6 +1,6 @@
 @proceeding{doi:10.1117/12.431168,
 author = {Gregor, Jens and Rannou, Fernando},
-title = {Least-squares framework for projection MRI reconstruction},
+title = {Least-squares framework for projection {MRI} reconstruction},
 journal = {Proc. SPIE},
 volume = {4322},
 number = {},
