[DOC] article: change title to more appropriate one
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
+++ b/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
@@ -27,8 +27,8 @@
 \theoremstyle{plain}
 \newtheorem{SmartLemma}{Лемма}
 
-\title{БЫСТРЫЕ МЕТОДЫ ВОССТАНОВЛЕНИЯ ТЕЛ ПО ОПОРНЫМ ФУНКЦИЯМ И ИХ ПРИЛОЖЕНИЕ К
-ЗАДАЧЕ ВОССТАНОВЛЕНИЯ ТЕЛ ПО ТЕНЕВЫМ КОНТУРАМ}
+\title{МЕТОД ИСКЛЮЧЕНИЯ ИЗБЫТОЧНЫХ УСЛОВИЙ В ЗАДАЧЕ ВОССТАНОВЛЕНИЯ ТЕЛА ПО 
+ИЗМЕРЕНИЯМ ЕГО ОПОРНОЙ ФУНКЦИИ}
 \author{Палачев\,И.\,А.}
 
 \begin{document}
