[DOC] article: add implementation description
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
+++ b/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
@@ -27,7 +27,7 @@
 \theoremstyle{plain}
 \newtheorem{SmartLemma}{Лемма}
 
-\title{МЕТОД ИСКЛЮЧЕНИЯ ИЗБЫТОЧНЫХ УСЛОВИЙ В ЗАДАЧЕ ВОССТАНОВЛЕНИЯ ТЕЛА ПО 
+\title{МЕТОД ИСКЛЮЧЕНИЯ ИЗБЫТОЧНЫХ ОГРАНИЧЕНИЙ В ЗАДАЧЕ ВОССТАНОВЛЕНИЯ ТЕЛА ПО 
 ИЗМЕРЕНИЯМ ЕГО ОПОРНОЙ ФУНКЦИИ}
 \author{Палачев\,И.\,А.}
 
@@ -748,6 +748,7 @@ $|(x^{*}_{i}, u_{i}) - h_{i}| \leq \varepsilon^{0}$
  \item По исходным опорным данным $u_{i}, h_{i}, i = 1, \ldots, m$
  построить тело $K^{0}$ как пересечение полупространств:
  \begin{equation}
+ \label{equation:naive-body}
   K^{0} = \bigcap \limits_{i = 1}^{m} \{(u_{i}, x) \leq h_{i}\}
  \end{equation}
  \item Пусть $A_{1}, \ldots A_{s}$ --- вершины тела $K^{0}$. Вычислить опорные
@@ -802,7 +803,112 @@ $\varepsilon' < \varepsilon^{*}$, и тогда система
 прохождении остальных шагов алгоритма задача не будет эквивалентна
 исходной, и её решение не будет удовлетворять всем условиям согласованности.
 
+\textbf{6. Реализация алгоритма.} В качестве входных данных для программы
+использовались теневые контуры, полученные в результате фотографирования
+драгоценных камней. Теневые контуры представляли из себя проекции вдоль
+некоторых горизонтальных направлений $\nu_{i}, i = 1, \ldots, n$. Каждый такой
+контур можно является многоугольником на плоскости $(\nu_{i}, x) = 0$.
+Рассматривавшиеся производственные теневые контуры могли быть незамкнутыми,
+поскольку сторона контура, соответствующая грани, на которой стоял камень на
+подставке во время фотографирования, часто не включалась в описание контура.
+Описание каждого контура представляло из себя список пар координат концов сторон
+контура.
+
+Для упрощения задачи над теневыми контурами производилась следующая
+предобработка:
+
+\begin{enumerate}
+ \item Если контур являлся незамкнутым, то он замыкался: между соседними
+ сторонами добавлялась дополнительная сторона
+ \item Вычислялся центр масс $C$ объединения всех контуров, и из всех координат
+ концов сторон вычитался вектор $OC$. Это делалось для того, чтобы гарантировать
+ положительность всех опорных чисел (Опорные числа положительны если и только
+ если тело содержит начало координат $O$ в своей внутренности).
+ \item Невыпуклые контуры заменялись своей выпуклой оболочкой.
+\end{enumerate}
+
+Очевидно, что процесс получения теневого контура можно интерпретировать как
+измерение опорной функции тела на большом круге сферы, т. е. каждый теневой
+контур по сути представляет из себя непрерывное семейство измерений опорной
+функции тела. Поскольку такие измерения получаются экспериментальным путем, то
+для нескольких контуров может не найтись выпуклого многогранника, им
+соответствующего.
+
+Чтобы согласовать контуры между собой, из них извлекались нормали всех сторон
+всех контуров $u_{i}, i = 1, \ldots, n$ и расстояния от начала координат до
+сторон $h_{i}$. Эти данные интерпретировались как измерения опорной функции
+исходного тела по опорным направлениям $u_{i}$. Очевидно, что согласованность
+опорных чисел $h_{i}$ является необходимым условием согласованности теневых
+контуров. Целью работы программы является построение таких согласованных чисел
+$h^{*}_{i}$, которые бы были наиболее близки к исходным.
+
+Алгоритм построения системы неизбыточных ограничений был реализован на
+основе API библиотеки алгоритмов вычислительной геометрии CGAL \cite{cgal}. В 
+качестве алгоритма построения выпуклой оболочки был использован стандартный
+алгоритм Quickhull \cite{Barber:1996:QAC:235815.235821} из пакета трехмерных
+выпуклых оболочек \cite{cgal:hs-ch3-15a}.
+
+Для нахождения пересечения
+полупространств в уравнении (\ref{equation:naive-body}) все плоскости, задающие
+полупространства, сначала отображались в двойственные им точки с помощью 
+преобразования двойственности $\delta$, затем строилась выпуклая оболочка
+полученных точек, вычислялись уравнения плоскостей граней полученного
+двойственного многогранника $\delta(K^{0})$, и на их основе
+вычислялись координаты вершин многогранника $K^{0}$ из уравнения
+(\ref{equation:naive-body}).
+
+Для быстрой проверки пересечения
+отрезка и многогранника использовалась структура данных AABB-дерево
+\cite{cgal:atw-aabb-15a}, позволяющая автоматически распараллеливать запросы
+на проверки пересечения.
+
+С помощью алгоритма построения системы неизбыточных ограничений строилась
+система ограничений задачи, к которым затем добавлялись условия локальности
+$|(x_{i}, u_{i}) - h_{i}| < \varepsilon^{0}$ для $L_{\infty}$ задачи, либо
+$|(x_{i}, u_{i}) - h_{i}| < \varepsilon_{i}$ для $L_{1}$ и $L_{2}$ задач.
+
+Полученные задачи решались с помощью следующих пакетов для решения задач
+оптимизации:
+
+\begin{enumerate}
+ \item GLPK \cite{glpk} использовался для решения $L_{\infty}$ и $L_{1}$ задач
+ и для генерации задач в формате MPS, который затем подавался на вход другим
+ решателям.
+ \item CLP \cite{clp} использовался для решения $L_{\infty}$ и $L_{1}$ задач.
+ \item Ipopt \cite{ipopt}, решатель на основе метода внутренней точки,
+ использовался для решения $L_{\infty}$, $L_{1}$ и $L_{2}$ задач с помощью С++
+ API для разделяемой библиотеки.
+ \item IBM ILOG CPLEX \cite{cplex} использовался для решения
+ $L_{\infty}$ и $L_{1}$ задач.
+\end{enumerate}
+
+В методе внутренней точки, реализованном в решателе Ipopt, помимо описания
+задачи оптимизации требуется указать начальную точку алгоритма. От того,
+насколько данная точка близка к точке минимума, существенно зависит
+быстродействие алгоритма. Поэтому в качестве начального положения точек касания
+$x_{i}$ были взяты точки касания пересечения полупространств из уравнения
+(\ref{equation:naive-body}):
+
+\begin{equation}
+ (u_{i}, x^{0}_{i}) = \max \limits_{j = 1, \ldots, N} (u_{i}, y_{j}),
+\end{equation}
+
+где $y_{j}, j = 1, \ldots, N$ --- коодинаты вершин многогранника $K^{0}$ из
+уравнения (\ref{equation:naive-body}).
+
+В результате работы решателей получался набор точек касания
+$x^{*}_{i}, i = 1, \ldots, m$, на основе которых строился набор опорных чисел
+$h^{*}_{i} = (x^{*}_{i}, u_{i})$. По этим числам и происходило восстановление
+трехмерного тела как пересечения полупространств:
+
+\begin{equation}
+ K^{*} = \bigcap \limits_{i = 1}^{m} \{(x, u_{i}) \leq h^{*}_{i}\}
+\end{equation}
+
+Вычисление этого многогранника осуществлялось точно так же, как и вычисление
+многогранника $K^{0}$ (см. выше).
+
 \bibliographystyle{plain}
-\bibliography{307167,81035,josaa-9-10-1693,234054,10.10022Fima.10007,906585citation,4586384,4333,141749,Gardner06convergenceof,Guntuboyina2012}
+\bibliography{307167,81035,josaa-9-10-1693,234054,10.10022Fima.10007,906585citation,4586384,4333,141749,Gardner06convergenceof,Guntuboyina2012,cgal,how_to_cite_cgal,235821,glpk,clp,ipopt,ibm-ilog-cplex}
 
 \end{document}
