[DOC] article: support Arushanyan requirements 1-2
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
+++ b/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
@@ -36,13 +36,17 @@
 \begin{document}
 \maketitle
 \begin{abstract}
- Производится обзор методов восстановления геометрических тел (двумерных и
- трехмерных) по измерениям опорной функции. Рассматриваются задачи линейного
- и квадратичного программирования, лежащие в основе этих методов. Доказывается
- достаточное условие избыточности ограничений задачи, позволяющее значительно
- уменьшить число ограничений. Рассматривается интерпретация теневых контуров
- как набора измерений опорной функции. Приводятся результаты проверки
- алгоритма на реальных данных, полученных из производственных теневых контуров.
+Предложен новый алгоритм восстановления тел по измерениям их опорных функций,
+который представляет из себя задачу квадратичного или линейного программирования
+в форме Гарднера - Кидерлена с меньшим числом ограничений. Уменьшение числа
+ограничений достигается за счет нового метода, который позволяет исключить из
+исходной системы ограничений часть ограничений как избыточные. Предложен новый
+подход, позволяющий применять методы восстановления тел по измерениям опорной
+функции к задаче восстановления тел по теневым контурам. Представлено описание
+реализации алгоритма, а также результаты его тестирования на реальных
+промышленных теневых контурах. Предложенный метод в рассмотренном примере
+позволил сократить число ограничений на 80\% и ускорить исходный алгоритм
+Гарднера - Кидерлена на порядок.
 \end{abstract}
 
 \textbf{Ключевые слова:} опорная функция, восстановление геометрических тел,
