[DOC] article: support Arushanyan requirement 3 (remove main graph)
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
+++ b/Documentation/i.palachev/Thesis/Article/PalachevSupportMethods.tex
@@ -975,28 +975,25 @@ $10, 20 , 30, \ldots, 180, 190, 200$ контуров и подавались в
  \label{Reduced-constraints-ratio-graph}
 \end{figure}
 
-\begin{figure}[p]
- \includegraphics[width=\textwidth]{images/Problem-solution-time-graphs}
- \captionsetup{singlelinecheck=off}
- \caption{Время решения различных типов задач оптимизации на различных
- решателях:
- $\square$ -- $L_{\infty}$-задача на CPLEX,
- $\blacksquare$ -- $L_{1}$-задача на CPLEX,
- $\Circle$ -- $L_{\infty}$-задача на Ipopt,
- $\CIRCLE$ -- $L_{1}$-задача на Ipopt,
- $+$ -- $L_{2}$-задача на Ipopt. Для сравнения \textbf{жирными линиями} показаны
- графики времени решения задач оптимизации, из которых не были выброшены
- избыточные условия}
- \label{Problem-solution-time-graphs}
-\end{figure}
+Для обоих решателей, как и требовалось ожидать, быстрее всего удается получить
+решение для задачи в метрике $L_{\infty}$. С помощью CPLEX задача решается
+за 9.52 секунды на 100 контурах (1476 опорных чисел) и за 71.24 секунды на 200
+контурах (2912 опорных чисел), и с помощью Ipopt за 32.17 и 278.73 секунды
+соответственно. В метрике $L_{1}$ эти же задачи решаются за 11.37 и 94.19 
+секунд с помощью CPLEX и за 65.29 и 655.79 секунд с помощью Ipopt. В метрике
+$L_{2}$ задача удалось решить только с помощью Ipopt: за 38.42 секунды
+на 100 контурах и за 360.53 секунды на 200 контурах.
 
-На рисунке \ref{Problem-solution-time-graphs} изображены графики времени решения
-задач оптимизации на различных решателях в различных метриках. Как оказалось,
-задачи в $L_{1}$ и $L_{\infty}$ метриках решаются CPLEX примерно с одинаковой
-скоростью, а на Ipopt -- задача в метрике $L_{1}$ решается даже медленнее, чем
-в метрике $L_{2}$. Также на этом рисунке видно, каким образом предлагаемый
-подход позволяет ускорить время работы алгоритма: он дает возможность за прежнее
-время решить задачу в 2 раза большей размерности.
+Насколько предложенный новый алгоритм быстрее исходного? Если не исключать
+избыточные условия, то при прочих равных условиях (решатели, библиотеки линейной
+алгебры и т. д.) задача на 100 контурах решается примерно за то же время, что
+и задача с исключенными избыточными условиями на 200 контурах. Таким образом,
+новый алгоритм дает возможность за прежнее время решить задачу в 2 раза большей
+размерности. Кроме того, следует отметить, что в статье Гарднера - Кидерлена
+рассматривается реализация алгоритма на Matlab, и оригинальный алгоритм
+решал задачу на 50 опорных числах примерно за 100 секунд. За это же время
+новый алгоритм успевает решить задачу на 130 теневых контурах, что соответствует
+1882 опорным числам.
 
 \textbf{8. Выводы и направления дальнейших исследований}. Из всего
 вышесказанного можно сделать следующие выводы:
